--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="card"><img src="images/india.jpg" alt="India"><h3>India</h3></div>
       </div>
       <div class="destinations-col">
-        <div class="card"><img src="images/united arab emirates.jpg" alt="UAE"><h3>United Arab Emirates</h3></div>
+        <div class="card"><img src="images/United Arab Emirates.jpg" alt="UAE"><h3>United Arab Emirates</h3></div>
         <div class="card"><img src="images/maldives.jpg" alt="Maldives"><h3>Malé - Maldives</h3></div>
         <div class="card"><img src="images/japan.jpg" alt="Japan"><h3>Japan</h3></div>
         <div class="card"><img src="images/swiss.jpg" alt="Switzerland"><h3>Switzerland</h3></div>
