--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <nav>
       <ul>
         <li><a href="#destinations">Destinations</a></li>
-        <li><a href="#packages">Packages</a></li>
+        <li><a href="#Services">Services</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
