--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
       text-decoration: none;
       color: #000080;
       font-weight: bold;
-      font-size: 1em;
-    }
+      font-size: 1.1em;
+      letter-spacing: 3px;
+      padding: 0 8px;
+}
 
     .flag-container {
       position: fixed;
@@ -209,10 +211,22 @@
       }
 
       nav ul {
-        flex-direction: column;
-        gap: 10px;
-        padding: 10px 0;
-      }
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #000080;
+      font-weight: bold;
+      font-size: 1.1em;
+      letter-spacing: 3px;
+      padding: 0 8px;
+    }
 
       .card img {
         height: 180px;
@@ -241,31 +255,94 @@
       }
     }
 
-    @media (max-width: 480px) {
-      .card img {
-        height: 160px;
-      }
-
       .logo-text {
-        font-size: 1.2em;
-      }
+      font-size: 2em;
+      font-weight: bold;
+      text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+      color: navy;
+    }
 
       .slogan {
-        font-size: 1em;
-      }
-
-      nav ul li a {
-        font-size: 0.95em;
-      }
+      text-align: center;
+      font-size: 1.9em;
+      color: #F5F5F5;
+      font-weight: bold;
+      margin-top: 10px;
+      text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    }
 
       h2 {
         font-size: 1.6em;
       }
+.whatsapp-contact {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      z-index: 1000;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 5px 10px;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+
+    .whatsapp-icon {
+      width: .4in;
+      height: .4in;
+      object-fit: contain;
+      display: block;
+    }
+
+    .whatsapp-number {
+      font-size: 1em;
+      color: navy;
+      font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
+      .logo { flex-direction: column; }
+      .logo-text { font-size: 1.5em; }
+      nav ul { flex-direction: column; gap: 10px; padding: 10px 0; }
+      .card img { height: 180px; }
+      .flag-container { top: 5px; right: 5px; }
+      .flag-container img { width: 60px; }
+      .slogan { font-size: 1.2em; padding: 10px; }
+      h2 { font-size: 1em; }
+      form { width: 90%; }
+    }
+
+    @media (max-width: 480px) {
+      .card img { height: 160px; }
+      .logo-text { font-size: 1.2em; }
+      .slogan { font-size: 1em; }
+      nav ul li a { font-size: 0.95em; }
+      h2 { font-size: 1em; }
     }
   </style>
 </head>
 <body>
   <header>
+<div class="whatsapp-contact" style="flex-direction: column; align-items: flex-start;">
+  <!-- WhatsApp Section -->
+  <div style="display: flex; align-items: center; gap: 8px;">
+    <img src="images/whatsapp.png" alt="WhatsApp" class="whatsapp-icon" />
+    <a href="https://wa.me/971542973818" class="whatsapp-number" target="_blank">+971 54 297 3818</a>
+  </div>
+
+  <!-- Space -->
+  <div style="height: -0.1in;"></div>
+
+  <!-- Email Section -->
+  <div style="display: flex; align-items: center; gap: 8px;">
+    <img src="images/email.png" alt="Email" style="width: 0.4in; height: 0.4in; object-fit: contain;" />
+    <a href="mailto:rantharutravels@gmail.com" style="font-size: 0.95em; color: navy; font-weight: bold; text-decoration: underline;">
+      rantharutravels@gmail.com
+    </a>
+  </div>
+</div>
+</div>
     <div class="logo">
       <img src="images/logo.png" alt="Rantharu Travels Logo" class="logo-img" />
       <span class="logo-text">Rantharu Travels</span>
@@ -275,13 +352,13 @@
       <img src="images/sri-lanka-flag.png" alt="Sri Lankan Flag" />
     </div>
     <nav>
-      <ul>
-        <li><a href="#destinations">Destinations</a></li>
-        <li><a href="#Services">Services</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="Visa & Ticketing.html">Visa & Ticketing (UAE)</a></li>
+    <li><a href="#">Job Opportunity</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
   </header>
 
   <section id="destinations" class="section">
@@ -294,7 +371,7 @@
         <div class="card"><img src="images/india.jpg" alt="India"><h3>India</h3></div>
       </div>
       <div class="destinations-col">
-        <div class="card"><img src="images/United Arab Emirates.jpg" alt="UAE"><h3>United Arab Emirates</h3></div>
+        <div class="card"><img src="images/dubai.jpg" alt="UAE"><h3>United Arab Emirates</h3></div>
         <div class="card"><img src="images/maldives.jpg" alt="Maldives"><h3>Malé - Maldives</h3></div>
         <div class="card"><img src="images/japan.jpg" alt="Japan"><h3>Japan</h3></div>
         <div class="card"><img src="images/swiss.jpg" alt="Switzerland"><h3>Switzerland</h3></div>
@@ -311,16 +388,24 @@
 
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required aria-label="Your Name" />
-      <input type="email" placeholder="Your Email" required aria-label="Your Email" />
-      <textarea placeholder="Your Message" required aria-label="Your Message"></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <form action="https://formsubmit.co/rantharutravels@gmail.com" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <input type="tel" name="whatsapp" placeholder="Your WhatsApp Number" required />
+  <textarea name="message" placeholder="Your Message" required></textarea>
+
+  <!-- Optional: Disable CAPTCHA -->
+  <input type="hidden" name="_captcha" value="false">
+
+  <!-- Optional: Redirect after submission -->
+  <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html" />
+
+  <button type="submit">Send Message</button>
+</form>
   </section>
 
   <footer>
     <p>&copy; 2025 Rantharu Travels. All rights reserved.</p>
   </footer>
 </body>
-</html>
+</html>		 
