--- a/index.html
+++ b/index.html
@@ -320,6 +320,59 @@
       nav ul li a { font-size: 0.95em; }
       h2 { font-size: 1em; }
     }
+#chat-widget-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 2147483647; /* MAX value for z-index */
+  pointer-events: auto;
+  isolation: isolate;
+}
+
+.whatsapp-float {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.whatsapp-float a {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.whatsapp-float .chat-text {
+  background-color: #25D366;
+  color: white;
+  font-weight: bold;
+  font-size: 0.9em;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-bottom: 5px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+  animation: pulse 1.5s infinite;
+  z-index: inherit;
+}
+
+.whatsapp-float img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  background-color: #25D366;
+  padding: 10px;
+  z-index: inherit;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+
   </style>
 </head>
 <body>
@@ -365,16 +418,55 @@
     <h2>Top Destinations</h2>
     <div class="destinations-row">
       <div class="destinations-col">
-        <div class="card"><img src="images/lanka.jpg" alt="Sri Lanka"><h3>Sri Lanka</h3></div>
-        <div class="card"><img src="images/paris.jpg" alt="Paris"><h3>Paris - France</h3></div>
-        <div class="card"><img src="images/bali.jpg" alt="Bali"><h3>Bali - Indonesia</h3></div>
-        <div class="card"><img src="images/india.jpg" alt="India"><h3>India</h3></div>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_Sri_Lanka" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/lanka.jpg" alt="Sri Lanka">
+    <h3>Sri Lanka</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_Paris" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/paris.jpg" alt="Paris">
+    <h3>Paris - France</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_Indonesia" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/bali.jpg" alt="Bali">
+    <h3>Bali - Indonesia</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_India" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/india.jpg" alt="India">
+    <h3>India</h3>
+  </div>
+</a>
       </div>
-      <div class="destinations-col">
-        <div class="card"><img src="images/dubai.jpg" alt="UAE"><h3>United Arab Emirates</h3></div>
-        <div class="card"><img src="images/maldives.jpg" alt="Maldives"><h3>Malé - Maldives</h3></div>
-        <div class="card"><img src="images/japan.jpg" alt="Japan"><h3>Japan</h3></div>
-        <div class="card"><img src="images/swiss.jpg" alt="Switzerland"><h3>Switzerland</h3></div>
+      <div class="destinations-col"><a href="https://en.wikipedia.org/wiki/Tourism_in_the_United_Arab_Emirates" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/dubai.jpg" alt="UAE">
+    <h3>United Arab Emirates</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_the_Maldives" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/maldives.jpg" alt="Maldives">
+    <h3>Malé - Maldives</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_Japan" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/japan.jpg" alt="Japan">
+    <h3>Japan</h3>
+  </div>
+</a>
+        <a href="https://en.wikipedia.org/wiki/Tourism_in_Switzerland" target="_blank" style="text-decoration: none;">
+  <div class="card">
+    <img src="images/swiss.jpg" alt="Switzerland">
+    <h3>Switzerland</h3>
+  </div>
+</a>
       </div>
     </div>
   </section>
@@ -407,5 +499,13 @@
   <footer>
     <p>&copy; 2025 Rantharu Travels. All rights reserved.</p>
   </footer>
+<div id="chat-widget-container">
+    <div class="whatsapp-float">
+      <a href="https://wa.me/971542973818" target="_blank" aria-label="Chat on WhatsApp">
+        <div class="chat-text">Chat with us!</div>
+        <img src="images/whatsapp.png" alt="WhatsApp Chat" />
+      </a>
+    </div>
+  </div>
 </body>
 </html>		 
